Fixed ArchiveHttpd.addToClassPath to use URI's instead or URLs to handle Windows file:P// paths properly.